--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
                 <h1>Md. Almansur Siddiqui</h1>
                 <p class="hero-subtitle">Senior Software Engineer & AI Architect</p>
                 <p class="hero-description">
-                    Crafting intelligent systems with 10+ years of expertise in Full-Stack Development,
+                    Crafting intelligent systems with over decade of expertise in Full-Stack Development,
                     AI/ML Engineering, and Cloud Architecture. Specializing in cutting-edge solutions
                     that transform business challenges into scalable innovations.
                 </p>
@@ -881,9 +881,12 @@
                     </p>
                     <div class="code-block">
                         <div class="code-line"><span class="code-comment">// Media processing pipeline</span></div>
-                        <div class="code-line"><span class="code-keyword">const</span> mediaServer = <span class="code-keyword">new</span> <span class="code-string">MediaSoup</span>({</div>
-                        <div class="code-line"> codecs: [<span class="code-string">'VP8'</span>, <span class="code-string">'H264'</span>],</div>
-                        <div class="code-line"> transports: [<span class="code-string">'WebRTC'</span>, <span class="code-string">'PlainRTP'</span>]</div>
+                        <div class="code-line"><span class="code-keyword">const</span> mediaServer = <span
+                                class="code-keyword">new</span> <span class="code-string">MediaSoup</span>({</div>
+                        <div class="code-line"> codecs: [<span class="code-string">'VP8'</span>, <span
+                                class="code-string">'H264'</span>],</div>
+                        <div class="code-line"> transports: [<span class="code-string">'WebRTC'</span>, <span
+                                class="code-string">'PlainRTP'</span>]</div>
                         <div class="code-line">})</div>
                     </div>
                 </div>
@@ -892,14 +895,17 @@
                     <div class="skill-icon">🔌</div>
                     <h3 class="skill-title">Real-Time Communication</h3>
                     <p class="skill-description">
-                        WebRTC, WebSocket, Socket.io, Peer-to-Peer Communication, 
+                        WebRTC, WebSocket, Socket.io, Peer-to-Peer Communication,
                         Real-time Translation, Live Chat, Video Conferencing, Telemedicine
                     </p>
                     <div class="code-block">
                         <div class="code-line"><span class="code-comment">// WebSocket server setup</span></div>
-                        <div class="code-line"><span class="code-keyword">const</span> io = <span class="code-keyword">require</span>(<span class="code-string">'socket.io'</span>)</div>
-                        <div class="code-line">io.<span class="code-string">on</span>(<span class="code-string">'connection'</span>, (socket) => {</div>
-                        <div class="code-line"> socket.<span class="code-string">on</span>(<span class="code-string">'message'</span>, handleMessage)</div>
+                        <div class="code-line"><span class="code-keyword">const</span> io = <span
+                                class="code-keyword">require</span>(<span class="code-string">'socket.io'</span>)</div>
+                        <div class="code-line">io.<span class="code-string">on</span>(<span
+                                class="code-string">'connection'</span>, (socket) => {</div>
+                        <div class="code-line"> socket.<span class="code-string">on</span>(<span
+                                class="code-string">'message'</span>, handleMessage)</div>
                         <div class="code-line">})</div>
                     </div>
                 </div>
@@ -908,15 +914,17 @@
                     <div class="skill-icon">🐳</div>
                     <h3 class="skill-title">DevOps & Infrastructure</h3>
                     <p class="skill-description">
-                        Docker, CI/CD, AWS Services (EC2, Lambda, RDS, ElastiCache), 
+                        Docker, CI/CD, AWS Services (EC2, Lambda, RDS, ElastiCache),
                         Nginx, HAProxy, Load Balancing, Auto-scaling, Infrastructure as Code
                     </p>
                     <div class="code-block">
                         <div class="code-line"><span class="code-comment"># Docker deployment</span></div>
-                        <div class="code-line"><span class="code-keyword">FROM</span> <span class="code-string">node:18-alpine</span></div>
+                        <div class="code-line"><span class="code-keyword">FROM</span> <span
+                                class="code-string">node:18-alpine</span></div>
                         <div class="code-line"><span class="code-keyword">COPY</span> package*.json ./</div>
                         <div class="code-line"><span class="code-keyword">RUN</span> npm ci --only=production</div>
-                        <div class="code-line"><span class="code-keyword">EXPOSE</span> <span class="code-string">3000</span></div>
+                        <div class="code-line"><span class="code-keyword">EXPOSE</span> <span
+                                class="code-string">3000</span></div>
                     </div>
                 </div>
 
@@ -924,15 +932,18 @@
                     <div class="skill-icon">🌐</div>
                     <h3 class="skill-title">Database & Caching</h3>
                     <p class="skill-description">
-                        PostgreSQL, MySQL, MongoDB, Redis, Vector Databases, 
+                        PostgreSQL, MySQL, MongoDB, Redis, Vector Databases,
                         Database Design, Query Optimization, Caching Strategies
                     </p>
                     <div class="code-block">
                         <div class="code-line"><span class="code-comment">// Redis caching layer</span></div>
-                        <div class="code-line"><span class="code-keyword">const</span> cache = <span class="code-keyword">await</span> redis.<span class="code-string">get</span>(key)</div>
+                        <div class="code-line"><span class="code-keyword">const</span> cache = <span
+                                class="code-keyword">await</span> redis.<span class="code-string">get</span>(key)</div>
                         <div class="code-line"><span class="code-keyword">if</span> (!cache) {</div>
-                        <div class="code-line"> <span class="code-keyword">const</span> data = <span class="code-keyword">await</span> db.<span class="code-string">query</span>(sql)</div>
-                        <div class="code-line"> <span class="code-keyword">await</span> redis.<span class="code-string">setex</span>(key, 3600, data)</div>
+                        <div class="code-line"> <span class="code-keyword">const</span> data = <span
+                                class="code-keyword">await</span> db.<span class="code-string">query</span>(sql)</div>
+                        <div class="code-line"> <span class="code-keyword">await</span> redis.<span
+                                class="code-string">setex</span>(key, 3600, data)</div>
                         <div class="code-line">}</div>
                     </div>
                 </div>
