--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Primary Meta Tags -->
-    <title>Md. Almansur Siddiqui - Senior Software Engineer & AI Architect | Full-Stack Developer</title>
-    <meta name="title" content="Md. Almansur Siddiqui - Senior Software Engineer & AI Architect | Full-Stack Developer">
+    <title>Md. Almansur Siddiqui - Lead Software Engineer & AI Architect | Full-Stack Developer</title>
+    <meta name="title" content="Md. Almansur Siddiqui - Lead Software Engineer & AI Architect | Full-Stack Developer">
     <meta name="description"
-        content="Senior Software Engineer with 10+ years experience in AI/ML, Full-Stack Development, WebRTC, and Cloud Architecture. Expert in RAG systems, vector databases, and real-time applications. Based in Dhaka, Bangladesh.">
+        content="Lead Software Engineer with 10+ years experience in AI/ML, Full-Stack Development, WebRTC, and Cloud Architecture. Expert in RAG systems, vector databases, and real-time applications. Based in Dhaka, Bangladesh.">
     <meta name="keywords"
-        content="Senior Software Engineer, AI Architect, Full-Stack Developer, Machine Learning, WebRTC, Cloud Architecture, RAG Systems, Vector Databases, React, Node.js, TypeScript, AWS, Bangladesh">
+        content="Lead Software Engineer, AI Architect, Full-Stack Developer, Machine Learning, WebRTC, Cloud Architecture, RAG Systems, Vector Databases, React, Node.js, TypeScript, AWS, Bangladesh">
     <meta name="author" content="Md. Almansur Siddiqui">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
@@ -20,9 +20,9 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://jemu51.github.io/">
-    <meta property="og:title" content="Md. Almansur Siddiqui - Senior Software Engineer & AI Architect">
+    <meta property="og:title" content="Md. Almansur Siddiqui - Lead Software Engineer & AI Architect">
     <meta property="og:description"
-        content="Senior Software Engineer with 10+ years experience in AI/ML, Full-Stack Development, WebRTC, and Cloud Architecture. Expert in RAG systems and real-time applications.">
+        content="Lead Software Engineer with 10+ years experience in AI/ML, Full-Stack Development, WebRTC, and Cloud Architecture. Expert in RAG systems and real-time applications.">
     <meta property="og:image" content="https://jemu51.github.io/og-image.jpg">
     <meta property="og:site_name" content="Md. Almansur Siddiqui Portfolio">
     <meta property="og:locale" content="en_US">
@@ -30,9 +30,9 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://jemu51.github.io/">
-    <meta property="twitter:title" content="Md. Almansur Siddiqui - Senior Software Engineer & AI Architect">
+    <meta property="twitter:title" content="Md. Almansur Siddiqui - Lead Software Engineer & AI Architect">
     <meta property="twitter:description"
-        content="Senior Software Engineer with 10+ years experience in AI/ML, Full-Stack Development, WebRTC, and Cloud Architecture.">
+        content="Lead Software Engineer with 10+ years experience in AI/ML, Full-Stack Development, WebRTC, and Cloud Architecture.">
     <meta property="twitter:image" content="https://jemu51.github.io/og-image.jpg">
 
     <!-- Additional SEO Meta Tags -->
@@ -65,8 +65,8 @@
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Md. Almansur Siddiqui",
-        "jobTitle": "Senior Software Engineer & AI Architect",
-        "description": "Senior Software Engineer with over a decade of expertise in Full-Stack Development, AI/ML Engineering, and Cloud Architecture",
+        "jobTitle": "Lead Software Engineer & AI Architect",
+        "description": "Lead Software Engineer with over a decade of expertise in Full-Stack Development, AI/ML Engineering, and Cloud Architecture",
         "url": "https://jemu51.github.io/",
         "image": "https://jemu51.github.io/og-image.jpg",
         "sameAs": [
@@ -120,7 +120,7 @@
         "employee": {
             "@type": "Person",
             "name": "Md. Almansur Siddiqui",
-            "jobTitle": "Senior Software Engineer"
+            "jobTitle": "Lead Software Engineer"
         }
     }
     </script>
@@ -1001,7 +1001,7 @@
                                 <span class="terminal-command">whoami</span>
                             </div>
                             <div class="terminal-line">
-                                <span class="terminal-output">Senior Software Engineer</span>
+                                <span class="terminal-output">Lead Software Engineer</span>
                             </div>
                             <div class="terminal-line">
                                 <span class="terminal-prompt">$</span>
@@ -1546,7 +1546,7 @@
                 <h2 class="section-title">Professional Experience</h2>
                 <div class="experience-timeline">
                     <article class="experience-item">
-                        <h3 class="experience-title">Senior Software Engineer</h3>
+                        <h3 class="experience-title">Lead Software Engineer</h3>
                         <p class="experience-company">TiCON System Ltd | November 2017 - Present (7+ years)</p>
                         <p style="color: var(--text-secondary); margin-bottom: 1rem;">Dhaka, Bangladesh</p>
                         <p style="margin-bottom: 1rem;">Leading full-stack development initiatives, architecting
