Update Open Graph and Twitter meta tags in index.html to use a new profile image URL for improved branding consistency.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta property="og:title" content="Md. Almansur Siddiqui - Lead Software Engineer & AI Architect">
     <meta property="og:description"
         content="Lead Software Engineer with 10+ years experience in AI/ML, Full-Stack Development, WebRTC, and Cloud Architecture. Expert in RAG systems and real-time applications.">
-    <meta property="og:image" content="https://jemu51.github.io/og-image.jpg">
+    <meta property="og:image" content="https://avatars.githubusercontent.com/jemu51?v=4">
     <meta property="og:site_name" content="Md. Almansur Siddiqui Portfolio">
     <meta property="og:locale" content="en_US">
 
@@ -33,7 +33,7 @@
     <meta property="twitter:title" content="Md. Almansur Siddiqui - Lead Software Engineer & AI Architect">
     <meta property="twitter:description"
         content="Lead Software Engineer with 10+ years experience in AI/ML, Full-Stack Development, WebRTC, and Cloud Architecture.">
-    <meta property="twitter:image" content="https://jemu51.github.io/og-image.jpg">
+    <meta property="twitter:image" content="https://avatars.githubusercontent.com/jemu51?v=4">
 
     <!-- Additional SEO Meta Tags -->
     <meta name="theme-color" content="#00ff88">
