--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <meta property="og:description"
         content="Lead Software Engineer with 10+ years experience in AI/ML, Full-Stack Development, WebRTC, and Cloud Architecture. Expert in RAG systems and real-time applications.">
     <meta property="og:image" content="https://avatars.githubusercontent.com/jemu51?v=4">
+    <meta property="og:image:width" content="400">
+    <meta property="og:image:height" content="400">
     <meta property="og:site_name" content="Md. Almansur Siddiqui Portfolio">
     <meta property="og:locale" content="en_US">
 
