Standardize name formatting in index.html by removing periods from "Md. Almansur Siddiqui" for consistency across meta tags and structured data.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Primary Meta Tags -->
-    <title>Md. Almansur Siddiqui - Lead Software Engineer & AI Architect | Full-Stack Developer</title>
-    <meta name="title" content="Md. Almansur Siddiqui - Lead Software Engineer & AI Architect | Full-Stack Developer">
+    <title>Md Almansur Siddiqui - Lead Software Engineer & AI Architect | Full-Stack Developer</title>
+    <meta name="title" content="Md Almansur Siddiqui - Lead Software Engineer & AI Architect | Full-Stack Developer">
     <meta name="description"
         content="Lead Software Engineer with 10+ years experience in AI/ML, Full-Stack Development, WebRTC, and Cloud Architecture. Expert in RAG systems, vector databases, and real-time applications. Based in Dhaka, Bangladesh.">
     <meta name="keywords"
         content="Lead Software Engineer, AI Architect, Full-Stack Developer, Machine Learning, WebRTC, Cloud Architecture, RAG Systems, Vector Databases, React, Node.js, TypeScript, AWS, Bangladesh">
-    <meta name="author" content="Md. Almansur Siddiqui">
+    <meta name="author" content="Md Almansur Siddiqui">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
     <meta name="revisit-after" content="7 days">
@@ -20,19 +20,19 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://jemu51.github.io/">
-    <meta property="og:title" content="Md. Almansur Siddiqui - Lead Software Engineer & AI Architect">
+    <meta property="og:title" content="Md Almansur Siddiqui - Lead Software Engineer & AI Architect">
     <meta property="og:description"
         content="Lead Software Engineer with 10+ years experience in AI/ML, Full-Stack Development, WebRTC, and Cloud Architecture. Expert in RAG systems and real-time applications.">
     <meta property="og:image" content="https://avatars.githubusercontent.com/jemu51?v=4">
     <meta property="og:image:width" content="400">
     <meta property="og:image:height" content="400">
-    <meta property="og:site_name" content="Md. Almansur Siddiqui Portfolio">
+    <meta property="og:site_name" content="Md Almansur Siddiqui Portfolio">
     <meta property="og:locale" content="en_US">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://jemu51.github.io/">
-    <meta property="twitter:title" content="Md. Almansur Siddiqui - Lead Software Engineer & AI Architect">
+    <meta property="twitter:title" content="Md Almansur Siddiqui - Lead Software Engineer & AI Architect">
     <meta property="twitter:description"
         content="Lead Software Engineer with 10+ years experience in AI/ML, Full-Stack Development, WebRTC, and Cloud Architecture.">
     <meta property="twitter:image" content="https://avatars.githubusercontent.com/jemu51?v=4">
@@ -66,7 +66,7 @@
     {
         "@context": "https://schema.org",
         "@type": "Person",
-        "name": "Md. Almansur Siddiqui",
+        "name": "Md Almansur Siddiqui",
         "jobTitle": "Lead Software Engineer & AI Architect",
         "description": "Lead Software Engineer with over a decade of expertise in Full-Stack Development, AI/ML Engineering, and Cloud Architecture",
         "url": "https://jemu51.github.io/",
@@ -121,7 +121,7 @@
         "url": "https://ticonsystem.com",
         "employee": {
             "@type": "Person",
-            "name": "Md. Almansur Siddiqui",
+            "name": "Md Almansur Siddiqui",
             "jobTitle": "Lead Software Engineer"
         }
     }
@@ -132,12 +132,12 @@
     {
         "@context": "https://schema.org",
         "@type": "WebSite",
-        "name": "Md. Almansur Siddiqui Portfolio",
+        "name": "Md Almansur Siddiqui Portfolio",
         "url": "https://jemu51.github.io/",
         "description": "Professional portfolio showcasing AI/ML, Full-Stack Development, and WebRTC expertise",
         "author": {
             "@type": "Person",
-            "name": "Md. Almansur Siddiqui"
+            "name": "Md Almansur Siddiqui"
         },
         "potentialAction": {
             "@type": "SearchAction",
@@ -997,7 +997,7 @@
             <div class="hero-grid">
                 <div class="hero-content">
                     <div class="profile-image-container">
-                        <img src="https://avatars.githubusercontent.com/jemu51?v=4" alt="Md. Almansur Siddiqui"
+                        <img src="https://avatars.githubusercontent.com/jemu51?v=4" alt="Md Almansur Siddiqui"
                             class="profile-image" loading="eager" width="200" height="200">
                         <h1 id="hero-title">Almansur Siddiqui</h1>
                     </div>
