--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <!-- Additional SEO Meta Tags -->
     <meta name="theme-color" content="#00ff88">
     <meta name="msapplication-TileColor" content="#00ff88">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Almansur Portfolio">
