--- a/index.html
+++ b/index.html
@@ -971,6 +971,37 @@
                 --border-color: #cccccc;
             }
         }
+
+        .contact-action-btn {
+            display: inline-block;
+            padding: 0.75rem 1.5rem;
+            background: linear-gradient(135deg, var(--accent-primary), var(--accent-secondary));
+            color: var(--bg-primary);
+            text-decoration: none;
+            border-radius: 8px;
+            font-weight: 600;
+            font-size: 0.9rem;
+            transition: all 0.3s ease;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            min-width: 120px;
+        }
+
+        .contact-action-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 8px 25px rgba(0, 255, 136, 0.3);
+            background: linear-gradient(135deg, var(--accent-secondary), var(--accent-primary));
+        }
+
+        .contact-action-btn:focus {
+            outline: 2px solid var(--accent-primary);
+            outline-offset: 2px;
+        }
+
+        .contact-card h3 {
+            margin-bottom: 1rem;
+        }
     </style>
 </head>
 
@@ -1710,26 +1741,31 @@
                     <article class="contact-card">
                         <div class="contact-icon" aria-hidden="true">📧</div>
                         <h3>Email</h3>
-                        <p style="color: var(--accent-primary); font-family: 'Fira Code', monospace;">
-                            almansursiddiqui@gmail.com</p>
+                        <a href="mailto:almansursiddiqui@gmail.com" class="contact-action-btn">
+                            Send Email
+                        </a>
                     </article>
                     <article class="contact-card">
-                        <div class="contact-icon" aria-hidden="true">📱</div>
-                        <h3>Phone</h3>
-                        <p style="color: var(--accent-primary); font-family: 'Fira Code', monospace;">+8801917839751</p>
+                        <div class="contact-icon" aria-hidden="true">🐦</div>
+                        <h3>X (Twitter)</h3>
+                        <a href="https://x.com/Jemu_Siddiqui" target="_blank" class="contact-action-btn">
+                            Connect on X
+                        </a>
                     </article>
                     <article class="contact-card">
                         <div class="contact-icon" aria-hidden="true">💼</div>
                         <h3>LinkedIn</h3>
-                        <p style="color: var(--accent-secondary); font-family: 'Fira Code', monospace;">
-                            linkedin.com/in/md-almansur-siddiqui</p>
+                        <a href="https://linkedin.com/in/md-almansur-siddiqui" target="_blank"
+                            class="contact-action-btn">
+                            Connect on LinkedIn
+                        </a>
                     </article>
                     <article class="contact-card">
                         <div class="contact-icon" aria-hidden="true">🐙</div>
                         <h3>GitHub</h3>
-                        <p style="color: var(--accent-secondary); font-family: 'Fira Code', monospace;">
-                            github.com/jemu51
-                        </p>
+                        <a href="https://github.com/jemu51" target="_blank" class="contact-action-btn">
+                            View on GitHub
+                        </a>
                     </article>
                 </div>
 
