--- a/index.html
+++ b/index.html
@@ -267,6 +267,157 @@
             align-items: center;
             position: relative;
             background: linear-gradient(135deg, var(--bg-primary) 0%, var(--bg-secondary) 50%, var(--bg-primary) 100%);
+            overflow: hidden;
+        }
+
+        /* Grok-like Background Animation */
+        .hero::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background:
+                radial-gradient(circle at 20% 80%, rgba(0, 255, 136, 0.1) 0%, transparent 50%),
+                radial-gradient(circle at 80% 20%, rgba(0, 123, 255, 0.1) 0%, transparent 50%),
+                radial-gradient(circle at 40% 40%, rgba(138, 43, 226, 0.05) 0%, transparent 50%);
+            animation: backgroundShift 20s ease-in-out infinite;
+        }
+
+        .hero::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-image:
+                url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%2300ff88' fill-opacity='0.03'%3E%3Ccircle cx='30' cy='30' r='2'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+            animation: patternFloat 30s linear infinite;
+        }
+
+        /* Floating Geometric Shapes */
+        .hero-bg-animation {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            pointer-events: none;
+            z-index: 1;
+        }
+
+        .floating-shape {
+            position: absolute;
+            border-radius: 50%;
+            background: linear-gradient(45deg, var(--accent-primary), var(--accent-secondary));
+            opacity: 0.08;
+            animation: float 15s ease-in-out infinite;
+        }
+
+        .floating-shape:nth-child(1) {
+            width: 80px;
+            height: 80px;
+            top: 10%;
+            left: -40px;
+            animation-delay: 0s;
+            animation-duration: 20s;
+        }
+
+        .floating-shape:nth-child(2) {
+            width: 60px;
+            height: 60px;
+            top: 60%;
+            right: -30px;
+            animation-delay: 5s;
+            animation-duration: 25s;
+        }
+
+        .floating-shape:nth-child(3) {
+            width: 50px;
+            height: 50px;
+            top: 20%;
+            right: 15%;
+            animation-delay: 2s;
+            animation-duration: 18s;
+        }
+
+        .floating-shape:nth-child(4) {
+            width: 40px;
+            height: 40px;
+            top: 70%;
+            left: 10%;
+            animation-delay: 8s;
+            animation-duration: 22s;
+        }
+
+        .floating-shape:nth-child(5) {
+            width: 30px;
+            height: 30px;
+            top: 40%;
+            left: 60%;
+            animation-delay: 12s;
+            animation-duration: 16s;
+        }
+
+        /* Particle System */
+        .particle {
+            position: absolute;
+            width: 4px;
+            height: 4px;
+            background: var(--accent-primary);
+            border-radius: 50%;
+            opacity: 0.6;
+            animation: particleFloat 12s linear infinite;
+        }
+
+        .particle:nth-child(6) {
+            top: 20%;
+            left: 10%;
+            animation-delay: 0s;
+        }
+
+        .particle:nth-child(7) {
+            top: 40%;
+            left: 20%;
+            animation-delay: 2s;
+        }
+
+        .particle:nth-child(8) {
+            top: 60%;
+            left: 30%;
+            animation-delay: 4s;
+        }
+
+        .particle:nth-child(9) {
+            top: 80%;
+            left: 40%;
+            animation-delay: 6s;
+        }
+
+        .particle:nth-child(10) {
+            top: 30%;
+            left: 70%;
+            animation-delay: 8s;
+        }
+
+        .particle:nth-child(11) {
+            top: 50%;
+            left: 80%;
+            animation-delay: 10s;
+        }
+
+        .particle:nth-child(12) {
+            top: 70%;
+            left: 90%;
+            animation-delay: 1s;
+        }
+
+        .particle:nth-child(13) {
+            top: 90%;
+            left: 5%;
+            animation-delay: 3s;
         }
 
         .hero-grid {
@@ -277,6 +428,8 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 0 2rem;
+            position: relative;
+            z-index: 2;
         }
 
         .profile-image-container {
@@ -325,6 +478,8 @@
         .hero-terminal {
             opacity: 0;
             animation: slideInRight 1s ease-out 0.5s forwards;
+            position: relative;
+            z-index: 2;
         }
 
         .terminal-content {
@@ -785,6 +940,77 @@
             }
         }
 
+        @keyframes backgroundShift {
+
+            0%,
+            100% {
+                transform: scale(1) rotate(0deg);
+            }
+
+            25% {
+                transform: scale(1.1) rotate(1deg);
+            }
+
+            50% {
+                transform: scale(1.05) rotate(-1deg);
+            }
+
+            75% {
+                transform: scale(1.15) rotate(0.5deg);
+            }
+        }
+
+        @keyframes patternFloat {
+            0% {
+                transform: translateY(0px) translateX(0px);
+            }
+
+            100% {
+                transform: translateY(-100px) translateX(50px);
+            }
+        }
+
+        @keyframes float {
+
+            0%,
+            100% {
+                transform: translateY(0px) translateX(0px) rotate(0deg);
+                opacity: 0.08;
+            }
+
+            25% {
+                transform: translateY(-20px) translateX(10px) rotate(90deg);
+                opacity: 0.15;
+            }
+
+            50% {
+                transform: translateY(-10px) translateX(-15px) rotate(180deg);
+                opacity: 0.05;
+            }
+
+            75% {
+                transform: translateY(-30px) translateX(5px) rotate(270deg);
+                opacity: 0.12;
+            }
+        }
+
+        @keyframes particleFloat {
+            0% {
+                transform: translateY(0px) translateX(0px);
+                opacity: 0.6;
+            }
+
+            50% {
+                transform: translateY(-30px) translateX(20px);
+                opacity: 0.3;
+            }
+
+            100% {
+                transform: translateY(-60px) translateX(40px);
+                opacity: 0;
+            }
+        }
+
         /* Scroll indicator */
         .scroll-indicator {
             position: fixed;
@@ -1026,6 +1252,23 @@
 
     <main id="main-content" role="main">
         <section class="hero" id="home" aria-labelledby="hero-title">
+            <!-- Background Animation Elements -->
+            <div class="hero-bg-animation">
+                <div class="floating-shape"></div>
+                <div class="floating-shape"></div>
+                <div class="floating-shape"></div>
+                <div class="floating-shape"></div>
+                <div class="floating-shape"></div>
+                <div class="particle"></div>
+                <div class="particle"></div>
+                <div class="particle"></div>
+                <div class="particle"></div>
+                <div class="particle"></div>
+                <div class="particle"></div>
+                <div class="particle"></div>
+                <div class="particle"></div>
+            </div>
+
             <div class="hero-grid">
                 <div class="hero-content">
                     <div class="profile-image-container">
