Update job title in index.html from "AI Architect" to "AI Solutions Architect" across meta tags and structured data for improved accuracy and consistency.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Primary Meta Tags -->
-    <title>Md Almansur Siddiqui - Lead Software Engineer & AI Architect | Full-Stack Developer</title>
-    <meta name="title" content="Md Almansur Siddiqui - Lead Software Engineer & AI Architect | Full-Stack Developer">
+    <title>Md Almansur Siddiqui - Lead Software Engineer & AI Solutions Architect | Full-Stack Developer</title>
+    <meta name="title"
+        content="Md Almansur Siddiqui - Lead Software Engineer & AI Solutions Architect | Full-Stack Developer">
     <meta name="description"
         content="Lead Software Engineer with 10+ years experience in AI/ML, Full-Stack Development, WebRTC, and Cloud Architecture. Expert in RAG systems, vector databases, and real-time applications. Based in Dhaka, Bangladesh.">
     <meta name="keywords"
-        content="Lead Software Engineer, AI Architect, Full-Stack Developer, Machine Learning, WebRTC, Cloud Architecture, RAG Systems, Vector Databases, React, Node.js, TypeScript, AWS, Bangladesh">
+        content="Lead Software Engineer, AI Solutions Architect, Full-Stack Developer, Machine Learning, WebRTC, Cloud Architecture, RAG Systems, Vector Databases, React, Node.js, TypeScript, AWS, Bangladesh">
     <meta name="author" content="Md Almansur Siddiqui">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
@@ -20,7 +21,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://jemu51.github.io/">
-    <meta property="og:title" content="Md Almansur Siddiqui - Lead Software Engineer & AI Architect">
+    <meta property="og:title" content="Md Almansur Siddiqui - Lead Software Engineer & AI Solutions Architect">
     <meta property="og:description"
         content="Lead Software Engineer with 10+ years experience in AI/ML, Full-Stack Development, WebRTC, and Cloud Architecture. Expert in RAG systems and real-time applications.">
     <meta property="og:image" content="https://avatars.githubusercontent.com/jemu51?v=4">
@@ -32,7 +33,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://jemu51.github.io/">
-    <meta property="twitter:title" content="Md Almansur Siddiqui - Lead Software Engineer & AI Architect">
+    <meta property="twitter:title" content="Md Almansur Siddiqui - Lead Software Engineer & AI Solutions Architect">
     <meta property="twitter:description"
         content="Lead Software Engineer with 10+ years experience in AI/ML, Full-Stack Development, WebRTC, and Cloud Architecture.">
     <meta property="twitter:image" content="https://avatars.githubusercontent.com/jemu51?v=4">
@@ -68,7 +69,7 @@
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Md Almansur Siddiqui",
-        "jobTitle": "Lead Software Engineer & AI Architect",
+        "jobTitle": "Lead Software Engineer & AI Solutions Architect",
         "description": "Lead Software Engineer with over a decade of expertise in Full-Stack Development, AI/ML Engineering, and Cloud Architecture",
         "url": "https://jemu51.github.io/",
         "image": "https://jemu51.github.io/og-image.jpg",
